[EFL][WK2] EWK2UnitTestBase.ewk_favicon_database_async_icon_get is crashing with new Ewk_Context https://bugs.webkit.org/show_bug.cgi?id=104110

Reviewed by Laszlo Gombos.

Unregister the WKFaviconDatabase client in EwkFaviconDatabase
destructor to avoid crashing if the callbacks get called
after the EwkFaviconDatabase object has been destroyed (i.e.
the parent EwkContext object was destroyed).

* UIProcess/API/efl/ewk_favicon_database.cpp:
(EwkFaviconDatabase::~EwkFaviconDatabase):


Canonical link: https://commits.webkit.org/122273@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136691 268f45cc-cd09-0410-ab3c-d52691b4dbfc